[package]
name = "tsx-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
swc_common = "8.0.1"
swc_ecma_ast = "8.1.0"
swc_ecma_parser = "11.0.0"
walkdir = "2.5.0"
