[package]
name = "rusty-react-flow"
version = "0.1.0"
edition = "2024"
authors = ["Jaeha Lee <wogkdkrm112@gmail.com>"]
description = "Parsing and analyzing React Components Flow code"
repository = "https://github.com/cargo-fob/rusty-react-flow"
license = "MIT"
readme = "README.md"
keywords = ["react", "rust", "cli", "parser", "typescript"]
categories = ["command-line-utilities"]
rust-version = "1.85.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "abort"

[lib]
name = "rusty_react_flow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
swc_common = "8.0.1"
swc_ecma_ast = "8.1.0"
swc_ecma_parser = "11.0.0"
walkdir = "2.5.0"
